2007-06-28  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/javascript.lang:
	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/gtk-doc.lang:
	* gtksourceview/language-specs/gvim.xml:
	* gtksourceview/language-specs/kate.xml:
	* gtksourceview/language-specs/java.lang:
	* gtksourceview/language-specs/ada.lang:
	* gtksourceview/language-specs/def.lang:

	Remove def:specials since it is redundant with def:error (it
	was used for future reserved keywords), add def:inline-docs
	and modify themes to use it.

2007-06-28  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ada.lang: misc improvements 
	by thelema@swbell.net. Bug #451325.

2007-06-27  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sh.lang: parse (...), so ')' isn't
	highlighted as mismatched parenthesis in m4.
	* gtksourceview/language-specs/m4.lang: more autoconf macros.

2007-06-27  Yevgen Muntyan  <muntyan@tamu.edu>

	* docs/reference/*: renamed gtk-doc package to gtksourceview-2.0.

2007-06-27  Yevgen Muntyan  <muntyan@tamu.edu>

	Made it possible to replace contexts: <replace id="what" ref="replace-with">.
	<context ref="foo" original="true"/> refers to the original context.

	* gtksourceview/language-specs/language2.rng: added new tag and attribute.
	* gtksourceview/language-specs/m4.lang: use it here.

	* gtksourceview/gtksourcecontextengine.h:
	* gtksourceview/gtksourcecontextengine.c:
	* gtksourceview/gtksourcelanguage-parser-2.c:
	above changes.

2007-06-27  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/m4.lang: added AC_LANG, AC_LINK_IFELSE,
	and AC_LANG_OBJC.
	* gtksourceview/language-specs/check.sh: added awk.lang.

	* gtksourceview/gtksourcestylemanager.h:
	* gtksourceview/gtksourcestylemanager.c (gtk_source_style_manager_list_schemes):
	return pointer to internal list instead of a copy.

2007-06-26  Yevgen Muntyan  <muntyan@tamu.edu>
