@@ -23,16 +23,16 @@
 <!-- Copyright (C) 2006-2007 - Yevgen Muntyan <muntyan@tamu.edu> -->
 <language id="gtk-doc" _name="gtk-doc" version="2.0" _section="Markup" hidden="true">
     <styles>
-        <style id="inline-docs-section" _name="Inline Documentation Section" map-to="def:comment"/>
-        <style id="function-name" _name="Function Name" map-to="def:inline-docs"/>
-        <style id="signal-name" _name="Signal Name" map-to="def:inline-docs"/>
-        <style id="property-name" _name="Property Name" map-to="def:inline-docs"/>
-        <style id="parameter" _name="Parameter" map-to="def:inline-docs"/>
-        <style id="constant" _name="Constant" map-to="def:inline-docs"/>
-        <style id="type" _name="Type" map-to="def:inline-docs"/>
-        <style id="function" _name="Function" map-to="def:inline-docs"/>
-        <style id="return" _name="Return" map-to="def:inline-docs"/>
-        <style id="since" _name="Since" map-to="def:inline-docs"/>
+        <style id="inline-docs-section" _name="Inline Documentation Section" map-to="def:doc-comment"/>
+        <style id="function-name" _name="Function Name" map-to="def:doc-comment-element"/>
+        <style id="signal-name" _name="Signal Name" map-to="def:doc-comment-element"/>
+        <style id="property-name" _name="Property Name" map-to="def:doc-comment-element"/>
+        <style id="parameter" _name="Parameter" map-to="def:doc-comment-element"/>
+        <style id="constant" _name="Constant" map-to="def:doc-comment-element"/>
+        <style id="type" _name="Type" map-to="def:doc-comment-element"/>
+        <style id="function" _name="Function" map-to="def:doc-comment-element"/>
+        <style id="return" _name="Return" map-to="def:doc-comment-element"/>
+        <style id="since" _name="Since" map-to="def:doc-comment-element"/>
     </styles>
 
     <definitions>
