@@ -46,7 +46,7 @@
   <style name="def:error"                   background="#FF0000" bold="true"/>
   <style name="def:escape"                  foreground="#9010D0"/>
   <style name="def:shebang"                 foreground="#0000FF" bold="true"/>
-  <style name="def:inline-docs"             italic="true"/>
+  <style name="def:doc-comment-element"     italic="true"/>
 
   <style name="def:specials"                foreground="#FFFFFF" background="#FF0000"/>
   <style name="def:preprocessor"            foreground="#A020F0"/>
