@@ -1,5 +1,14 @@
 2007-06-28  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/language-specs/gtk-doc.lang:
+	* gtksourceview/language-specs/gvim.xml:
+	* gtksourceview/language-specs/kate.xml:
+	* gtksourceview/language-specs/def.lang:
+
+	Better names for the comments with inline docs sections.
+
+2007-06-28  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/language-specs/javascript.lang:
 	* gtksourceview/language-specs/c.lang:
 	* gtksourceview/language-specs/gtk-doc.lang:
